Make command better

--- a/services/helios.identity/helios.identity.data/Jenkinsfile
+++ b/services/helios.identity/helios.identity.data/Jenkinsfile
@@ -36,7 +36,7 @@ pipeline {
                 dir("${SOLUTION_DIR}") {
                     runAndDeleteContainerCommand('mcr.microsoft.com/dotnet/sdk:9.0',
                     '''
-                    bash -c dotnet tool install --global dotnet-ef --version 9.0.0-* && export PATH="$PATH:/root/.dotnet/tools" && \
+                    dotnet tool install --global dotnet-ef --version 9.0.0-* && export PATH="$PATH:/root/.dotnet/tools" && \
                     dotnet ef migrations list -s ./helios.identity.api -p ./helios.identity.data -c IdentityContext -- --environment Development
                     '''
                     )
