Updated jenkins for api

--- a/services/helios.identity/helios.identity.api/Jenkinsfile
+++ b/services/helios.identity/helios.identity.api/Jenkinsfile
@@ -25,6 +25,10 @@ pipeline {
             }
         }
 
+        stage('Load secrets') {
+            loadAppsettings('helios.identity.api', 'Development')
+        }
+
         stage('Build Docker Image') {
             when {
                 anyOf {
