--- a/services/helios.identity/helios.identity.api/Jenkinsfile
+++ b/services/helios.identity/helios.identity.api/Jenkinsfile
@@ -26,7 +26,9 @@ pipeline {
         }
 
         stage('Load secrets') {
-            loadAppsettings('helios.identity.api', 'Development')
+            steps {
+                loadAppsettings('helios.identity.api', 'Development')
+            }
         }
 
         stage('Build Docker Image') {
