--- a/services/helios.identity/helios.identity.data/Jenkinsfile
+++ b/services/helios.identity/helios.identity.data/Jenkinsfile
@@ -42,16 +42,17 @@ pipeline {
             }
             steps {
                 dir("${SOLUTION_DIR}") {
-                    runAndDeleteContainerCommand('mcr.microsoft.com/dotnet/sdk:9.0',
-                        """
-                        dotnet tool install --global dotnet-ef --version 9.0.0-* && \
-                        export PATH=\\\$PATH:/root/.dotnet/tools && \
-                        dotnet ef migrations list -s ./services/helios.identity/helios.identity.api \
-                        -p ./services/helios.identity/helios.identity.data \
-                        -c IdentityContext -- --environment Development
-                        \"
-                        """
-                    )
+                    docker run --rm -v "${PWD}:/workspace" -w /workspace mcr.microsoft.com/dotnet/sdk:9.0 bash -c 'dotnet tool install --global dotnet-ef --version 9.0.0-* && export PATH="$PATH:/root/.dotnet/tools" && dotnet ef migrations list -s ./helios.identity.api -p ./helios.identity.data -c IdentityContext -- --environment Development'
+                    // runAndDeleteContainerCommand('mcr.microsoft.com/dotnet/sdk:9.0',
+                    //     """
+                    //     dotnet tool install --global dotnet-ef --version 9.0.0-* && \
+                    //     export PATH=\\\$PATH:/root/.dotnet/tools && \
+                    //     dotnet ef migrations list -s ./services/helios.identity/helios.identity.api \
+                    //     -p ./services/helios.identity/helios.identity.data \
+                    //     -c IdentityContext -- --environment Development
+                    //     \"
+                    //     """
+                    // )
                 }
             }
         }
