Updated command to update database

--- a/services/helios.identity/helios.identity.data/Jenkinsfile
+++ b/services/helios.identity/helios.identity.data/Jenkinsfile
@@ -49,7 +49,8 @@ pipeline {
                     mcr.microsoft.com/dotnet/sdk:9.0 \
                     bash -c "dotnet tool install --global dotnet-ef --version 9.0.0-* && \
                             export PATH=\\\$PATH:/root/.dotnet/tools && \
-                            dotnet ef migrations list -s ./services/helios.identity/helios.identity.api \
+                            dotnet ef database update \
+                            -s .\helios.identity.api \
                             -p ./services/helios.identity/helios.identity.data \
                             -c IdentityContext -- --environment Development"
                     """
