--- a/services/helios.identity/helios.identity.data/Jenkinsfile
+++ b/services/helios.identity/helios.identity.data/Jenkinsfile
@@ -50,7 +50,7 @@ pipeline {
                     bash -c "dotnet tool install --global dotnet-ef --version 9.0.0-* && \
                             export PATH=\\\$PATH:/root/.dotnet/tools && \
                             dotnet ef database update \
-                            -s .\helios.identity.api \
+                            -s ./helios.identity.api \
                             -p ./services/helios.identity/helios.identity.data \
                             -c IdentityContext -- --environment Development"
                     """
