--- a/services/helios.identity/helios.identity.data/Jenkinsfile
+++ b/services/helios.identity/helios.identity.data/Jenkinsfile
@@ -42,7 +42,7 @@ pipeline {
             }
             steps {
                 dir("${SOLUTION_DIR}") {
-                    runInDocker('mcr.microsoft.com/dotnet/sdk:9.0', [
+                    runAndDeleteContainerCommand('mcr.microsoft.com/dotnet/sdk:9.0', [
                         'dotnet tool install --global dotnet-ef --version 9.0.0-*',
                         'export PATH=$PATH:/root/.dotnet/tools',
                         'dotnet ef migrations list -s ./services/helios.identity/helios.identity.api -p ./services/helios.identity/helios.identity.data -c IdentityContext -- --environment Development'
