--- a/services/helios.identity/helios.identity.data/Jenkinsfile
+++ b/services/helios.identity/helios.identity.data/Jenkinsfile
@@ -28,18 +28,7 @@ pipeline {
         stage('Database Migrations Dev') {
             steps {
                 dir("${SOLUTION_DIR}") {
-                    sh """
-                    docker run --rm \
-                    -v "\$WORKSPACE:/workspace" \
-                    -w /workspace \
-                    mcr.microsoft.com/dotnet/sdk:9.0 \
-                    bash -c "dotnet tool install --global dotnet-ef --version 9.0.0-* && \
-                            export PATH=\\\$PATH:/root/.dotnet/tools && \
-                            dotnet ef database update \
-                            -s ./helios.identity.api \
-                            -p ./services/helios.identity/helios.identity.data \
-                            -c IdentityContext -- --environment Development"
-                    """
+                    updateDBFromMigration('helios.identity', 'IdentityContext', '9.0', '9.0.0-*')
                 }
             }
         }
