Added user tag to ssh command

--- a/services/helios.identity/helios.identity.api/Jenkinsfile
+++ b/services/helios.identity/helios.identity.api/Jenkinsfile
@@ -49,8 +49,8 @@ pipeline {
         stage('Deploy Dev') {
             steps {
 				dir("${DIR}") { 
-					sh 'scp docker-compose.yml sys1.clarkmiller.ca:/home/miller/helios-identity'
-                	sh 'ssh sys1.clarkmiller.ca "cd helios-identity && sudo docker compose up -d"'
+					sh 'scp docker-compose.yml miller@sys1.clarkmiller.ca:/home/miller/helios-identity'
+                	sh 'ssh miller@sys1.clarkmiller.ca "cd helios-identity && sudo docker compose up -d"'
 				}
             }
         }
