Setup env for client

--- a/services/helios.identity/helios.identity.client/Jenkinsfile
+++ b/services/helios.identity/helios.identity.client/Jenkinsfile
@@ -56,6 +56,8 @@ pipeline {
             steps {
                 dir("${DIR}") { 
                     sh 'npm install'
+					loadEnvFile('helios.identity', 'client', 'development')
+					loadEnvFile('helios.identity', 'production', 'production')
                 }
             }
         }
