Fixed error with env

--- a/services/helios.identity/helios.identity.client/Jenkinsfile
+++ b/services/helios.identity/helios.identity.client/Jenkinsfile
@@ -57,7 +57,7 @@ pipeline {
                 dir("${DIR}") { 
                     sh 'npm install'
 					loadEnvFile('helios.identity', 'client', 'development')
-					loadEnvFile('helios.identity', 'production', 'production')
+					loadEnvFile('helios.identity', 'client', 'production')
                 }
             }
         }
