Removed sudo tag which caused errors with docker

--- a/services/helios.identity/helios.identity.api/Jenkinsfile
+++ b/services/helios.identity/helios.identity.api/Jenkinsfile
@@ -50,7 +50,7 @@ pipeline {
             steps {
 				dir("${DIR}") { 
 					sh 'scp docker-compose.yml miller@sys1.clarkmiller.ca:/home/miller/helios-identity'
-                	sh 'ssh miller@sys1.clarkmiller.ca "cd helios-identity && sudo docker compose up -d"'
+                	sh 'ssh miller@sys1.clarkmiller.ca "cd helios-identity && docker compose up -d"'
 				}
             }
         }
