Updated Jenksinsfiles to have better param names, also improved api logic to use reverse-proxying instead of pulling backend path from an env

--- a/services/helios.identity/helios.identity.api/Jenkinsfile
+++ b/services/helios.identity/helios.identity.api/Jenkinsfile
@@ -5,10 +5,28 @@ pipeline {
 
     parameters {
         booleanParam(
-            name: 'FORCE_RUN',
+            name: 'All',
             defaultValue: false,
-            description: 'Forces run even if there are no changes'
+            description: 'Runs all steps'
         )
+		
+		booleanParam(
+			name: 'Dev',
+			defaultValue: false,
+			description: 'Runs dev steps'
+		)
+
+		booleanParam(
+			name: 'Prod',
+			defaultValue: false,
+			description: 'Runs prod steps'
+		)
+
+		booleanParam(
+			name: 'Deploy',
+			defaultValue: true,
+			description: 'Runs deploy steps'
+		)
     }
 
     environment {
@@ -27,6 +45,9 @@ pipeline {
 
         stage('Load secrets') {
             steps {
+				when { 
+					expression { return params.All || params.Dev || params.Prod }	
+				}
                 dir("${DIR}") {
                     loadAppsettings('helios.identity.api', 'Development')
                     loadAppsettings('helios.identity.api', 'Production')
@@ -36,6 +57,11 @@ pipeline {
 
         stage('Build Docker Image') {
             steps {
+				when {
+					anyOf {
+						expression { return params.All || params.Dev || params.Prod }	
+					}
+				}
                 dir("${SOLUTION_DIR}") {
                     echo "Building Docker image for ${DIR}..."
                     buildDockerImage('./helios.identity.api/Dockerfile', 'helios-identity', 'latest')
