--- a/services/helios.identity/helios.identity.client/nginx.dev.conf
+++ b/services/helios.identity/helios.identity.client/nginx.dev.conf
@@ -8,5 +8,15 @@ server{
         try_files $uri /index.html;
     }
 
+	location /api/identity/ {
+		proxy_pass http://10.100.0.2:6413/;
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header X-Forwarded-Proto $scheme;
+		proxy_set_header Content-Type application/json;
+		proxy_pass_header Authorization;
+	}
+
     listen 80;
 }
