--- a/services/helios.identity/helios.identity.api/Jenkinsfile
+++ b/services/helios.identity/helios.identity.api/Jenkinsfile
@@ -45,6 +45,7 @@ pipeline {
 
         stage('Load secrets') {
             when { 
+				changeset "${DIR}/**"
 				expression { return params.All || params.Dev || params.Prod }	
 			}
 			steps {
@@ -75,7 +76,7 @@ pipeline {
 
         stage('Deploy Dev') {
 			when {
-				anyof {
+				anyOf {
 					changeset "${DIR}/**"
 					expression { return params.All || params.Dev }
 				}
