Fixed nginx config

--- a/services/helios.identity/helios.identity.client/nginx.dev.conf
+++ b/services/helios.identity/helios.identity.client/nginx.dev.conf
@@ -9,7 +9,7 @@ server{
     }
 
 	location /api/identity/ {
-		proxy_pass http://10.100.0.2:6412/api/;
+		proxy_pass http://10.100.0.2:6412;
 		proxy_set_header Host $host;
 		proxy_set_header X-Real-IP $remote_addr;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
