--- a/services/helios.identity/helios.identity.sdk/js/package.json
+++ b/services/helios.identity/helios.identity.sdk/js/package.json
@@ -1,12 +1,17 @@
 {
   "name": "helios-identity-sdk",
-  "version": "1.0.4",
+  "version": "1.0.6",
   "description": "",
   "license": "ISC",
-  "author": "",
-  "type": "commonjs",
+  "author": "DevClarkMiller",
+  "type": "module",
   "main": "index.js",
+  "files": [
+    "build",
+    "README.md"
+  ],
   "scripts": {
+    "build": "npx tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
