--- a/services/helios.identity/helios.identity.sdk/js/package.json
+++ b/services/helios.identity/helios.identity.sdk/js/package.json
@@ -1,11 +1,12 @@
 {
   "name": "helios-identity-sdk",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "",
   "license": "ISC",
   "author": "DevClarkMiller",
   "type": "module",
-  "main": "index.js",
+  "main": "build/index.js",
+  "types": "build/index.d.ts",
   "files": [
     "build",
     "README.md"
