Fixed api Jenkinsfile

--- a/services/helios.identity/helios.identity.api/Jenkinsfile
+++ b/services/helios.identity/helios.identity.api/Jenkinsfile
@@ -44,9 +44,11 @@ pipeline {
         }
 
         stage('Load secrets') {
-            when { 
-				changeset "${DIR}/**"
-				expression { return params.All || params.Dev || params.Prod }	
+            when {
+				anyOf {
+					changeset "${DIR}/**"
+					expression { return params.All || params.Dev || params.Prod }	
+				}
 			}
 			steps {
                 dir("${DIR}") {
