--- a/services/helios.identity/helios.identity.client/package.json
+++ b/services/helios.identity/helios.identity.client/package.json
@@ -15,6 +15,8 @@
 		"bootstrap": "^5.3.8",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-prettier": "^5.5.4",
+		"helios-identity-sdk": "^1.0.24",
+		"helios-utilities-sdk": "^1.0.13",
 		"react": "^19.1.1",
 		"react-bootstrap": "^2.10.10",
 		"react-dom": "^19.1.1",
