--- a/services/helios.identity/helios.identity.api/docker-compose-dev.yml
+++ b/services/helios.identity/helios.identity.api/docker-compose-dev.yml
@@ -7,4 +7,4 @@ services:
       - "6413:8081"
     environment:
       ASPNETCORE_ENVIRONMENT: "Development"
-    restart: on-failure
+    restart: unless-stopped
