--- a/services/helios.identity/helios.identity.client/package.json
+++ b/services/helios.identity/helios.identity.client/package.json
@@ -23,6 +23,8 @@
 		"react-icons": "^5.5.0",
 		"react-loading-icons": "^1.1.0",
 		"react-router-dom": "^7.9.5",
+		"react-sliding-pane": "^7.3.0",
+		"react-tooltip": "^5.30.0",
 		"sass": "^1.93.3"
 	},
 	"devDependencies": {
