--- a/services/helios.identity/helios.identity.api/helios.identity.api.csproj
+++ b/services/helios.identity/helios.identity.api/helios.identity.api.csproj
@@ -10,6 +10,8 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="15.1.0" />
+    <PackageReference Include="FreeMediator" Version="1.4.0" />
+    <PackageReference Include="MailKit" Version="4.14.1" />
     <PackageReference Include="MediatR" Version="13.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="9.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.10" />
